# Financial-adviser

./: .env.example  .gitignore  FinAdvisor Planning.md  README.md  dev.cmd  dev.ps1  docker-compose.yml  package-lock.json  package.json
.github/workflows/: dotnet-ci.yml  nextjs-ci.yml  python-ci.yml
FinAdvisor/: FinAdvisor.slnx
FinAdvisor/src/FinAdvisor.Api/: FinAdvisor.Api.csproj  FinAdvisor.Api.http  HealthCheckResponseWriter.cs  Program.cs  appsettings.Development.json  appsettings.json
FinAdvisor/src/FinAdvisor.Application/: FinAdvisor.Application.csproj
FinAdvisor/src/FinAdvisor.Infrastructure/: FinAdvisor.Infrastructure.csproj
FinAdvisor/tests/FinAdvisor.Api.Tests/: FinAdvisor.Api.Tests.csproj  HealthCheckTests.cs  TestWebApplicationFactory.cs
docs/: architecture.md  design.md  interview-notes.md  planning.md  sprint-log.md  sprint-plan.md
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/: store.tsx  theme.ts
src/analytics-service/: Dockerfile  pyproject.toml
src/analytics-service/app/: main.py
src/analytics-service/app/models/: bank_statement.py  cas.py  holdings_import.py  plan.py  recommendations.py  simulation.py  sip_import.py  xirr.py
src/analytics-service/app/routers/: bank_statement.py  cas.py  holdings_import.py  plan.py  recommendations.py  simulation.py  sip_import.py  xirr.py
src/analytics-service/app/services/: monte_carlo.py  xirr.py
src/analytics-service/tests/: test_cas.py  test_recommendations.py  test_simulation.py  test_xirr.py
src/web/: next.config.mjs  package-lock.json  package.json
(+215 files in other folders)
